<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL" Id="{7adf7cfb-86e5-48b5-b85f-f7a2a378910a}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
END_VAR

VAR_GLOBAL CONSTANT
	MAX_CSV_ROWS 			: UDINT := 500;
	MAX_CSV_COLUMNS 		: UDINT := 6; // 0 - 6, so 7
	MAX_CSV_FIELD_LENGTH	: UDINT := 150;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>